--- a/百思不得姐/百思不得姐/Classes/FriendTrends/Controller/YGFriendTrendsView.xib
+++ b/百思不得姐/百思不得姐/Classes/FriendTrends/Controller/YGFriendTrendsView.xib
@@ -41,7 +41,7 @@
 好友动态让你过把瘾儿~
 欧耶~~~~!</string>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="textColor" red="0.59607843137254901" green="0.40392156862745099" blue="0.21568627450980393" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hvT-L0-88m">
