--- a/百思不得姐/百思不得姐/Classes/FriendTrends/Controller/YGRecommendViewController.xib
+++ b/百思不得姐/百思不得姐/Classes/FriendTrends/Controller/YGRecommendViewController.xib
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="YGRecommendViewController">
             <connections>
+                <outlet property="leftTableView" destination="YWz-ce-9mh" id="5sc-Wz-zWr"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -13,7 +15,26 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YWz-ce-9mh" userLabel="左侧">
+                    <rect key="frame" x="0.0" y="0.0" width="70" height="600"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="70" id="Tux-qs-t1J"/>
+                    </constraints>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="9Ej-9u-iqi"/>
+                        <outlet property="delegate" destination="-1" id="F8y-rh-EeK"/>
+                    </connections>
+                </tableView>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="YWz-ce-9mh" secondAttribute="bottom" id="0ev-XS-6VV"/>
+                <constraint firstItem="YWz-ce-9mh" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="JVl-xb-pwm"/>
+                <constraint firstItem="YWz-ce-9mh" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="jP9-Iu-gu5"/>
+            </constraints>
+            <point key="canvasLocation" x="1" y="329"/>
         </view>
     </objects>
 </document>
