--- a/百思不得姐/百思不得姐/Classes/FriendTrends/Controller/YGFriendTrendsView.xib
+++ b/百思不得姐/百思不得姐/Classes/FriendTrends/Controller/YGFriendTrendsView.xib
@@ -56,6 +56,9 @@
                     <state key="highlighted" backgroundImage="friendsTrend_login_click">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="LoginRegister:" destination="-1" eventType="touchUpInside" id="rIk-ve-ZSO"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
