--- a/百思不得姐/百思不得姐/Classes/Other/YGTopicCell.xib
+++ b/百思不得姐/百思不得姐/Classes/Other/YGTopicCell.xib
@@ -22,14 +22,14 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V06-Gz-G2y" userLabel="昵称">
-                        <rect key="frame" x="55" y="10" width="42" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="55" y="10" width="38" height="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DVp-HB-zKl" userLabel="时间">
-                        <rect key="frame" x="55" y="29" width="33" height="16"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <rect key="frame" x="55" y="31" width="31" height="14"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -155,6 +155,15 @@
                     <constraint firstItem="DVp-HB-zKl" firstAttribute="bottom" secondItem="SB4-Rf-Swf" secondAttribute="bottom" id="tW8-Rb-twF"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="caiBtn" destination="dm3-18-b1C" id="bt8-TP-tbf"/>
+                <outlet property="commentBtn" destination="jN0-Vz-hgc" id="Pdy-LE-YIj"/>
+                <outlet property="createTimeLabel" destination="DVp-HB-zKl" id="1ei-rB-4X2"/>
+                <outlet property="dingBtn" destination="8co-tX-NC5" id="J6N-GE-PPs"/>
+                <outlet property="nicknameLabe" destination="V06-Gz-G2y" id="JdB-r9-rGo"/>
+                <outlet property="profile_image" destination="SB4-Rf-Swf" id="dRa-fP-zZZ"/>
+                <outlet property="repostBtn" destination="z24-4i-KrH" id="OQf-Hf-rsW"/>
+            </connections>
             <point key="canvasLocation" x="762" y="790"/>
         </tableViewCell>
     </objects>
