--- a/百思不得姐/百思不得姐/Classes/Other/YGTopicCell.xib
+++ b/百思不得姐/百思不得姐/Classes/Other/YGTopicCell.xib
@@ -11,7 +11,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="212"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="212"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="211.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SB4-Rf-Swf" userLabel="头像">
@@ -140,6 +140,12 @@
                             <constraint firstAttribute="bottom" secondItem="luB-km-ENx" secondAttribute="bottom" id="zjY-tO-fkF"/>
                         </constraints>
                     </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b8v-QB-ekw" userLabel="文字">
+                        <rect key="frame" x="10" y="55" width="300" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="V06-Gz-G2y" firstAttribute="leading" secondItem="SB4-Rf-Swf" secondAttribute="trailing" constant="10" id="3g4-70-ZyR"/>
@@ -147,10 +153,13 @@
                     <constraint firstItem="SB4-Rf-Swf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="ASg-xx-05k"/>
                     <constraint firstItem="CFj-0a-0cs" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="G32-P1-Igl"/>
                     <constraint firstItem="OK3-Oa-wVM" firstAttribute="top" secondItem="V06-Gz-G2y" secondAttribute="top" id="Gdc-jS-Dzw"/>
+                    <constraint firstItem="b8v-QB-ekw" firstAttribute="top" secondItem="SB4-Rf-Swf" secondAttribute="bottom" constant="10" id="Jnv-HX-AtA"/>
                     <constraint firstAttribute="bottom" secondItem="CFj-0a-0cs" secondAttribute="bottom" id="L9m-hR-P0R"/>
                     <constraint firstItem="V06-Gz-G2y" firstAttribute="top" secondItem="SB4-Rf-Swf" secondAttribute="top" id="LhS-Ly-kJk"/>
+                    <constraint firstItem="b8v-QB-ekw" firstAttribute="leading" secondItem="SB4-Rf-Swf" secondAttribute="leading" id="Xly-Dd-HqF"/>
                     <constraint firstItem="DVp-HB-zKl" firstAttribute="leading" secondItem="V06-Gz-G2y" secondAttribute="leading" id="d0l-pt-4td"/>
                     <constraint firstAttribute="trailing" secondItem="OK3-Oa-wVM" secondAttribute="trailing" constant="10" id="e3i-vK-pfd"/>
+                    <constraint firstItem="b8v-QB-ekw" firstAttribute="trailing" secondItem="OK3-Oa-wVM" secondAttribute="trailing" id="ibH-Yl-WaD"/>
                     <constraint firstAttribute="trailing" secondItem="CFj-0a-0cs" secondAttribute="trailing" id="smu-XD-7q0"/>
                     <constraint firstItem="DVp-HB-zKl" firstAttribute="bottom" secondItem="SB4-Rf-Swf" secondAttribute="bottom" id="tW8-Rb-twF"/>
                 </constraints>
@@ -158,13 +167,14 @@
             <connections>
                 <outlet property="caiBtn" destination="dm3-18-b1C" id="bt8-TP-tbf"/>
                 <outlet property="commentBtn" destination="jN0-Vz-hgc" id="Pdy-LE-YIj"/>
+                <outlet property="contentLabel" destination="b8v-QB-ekw" id="xbK-ym-RKu"/>
                 <outlet property="createTimeLabel" destination="DVp-HB-zKl" id="1ei-rB-4X2"/>
                 <outlet property="dingBtn" destination="8co-tX-NC5" id="J6N-GE-PPs"/>
                 <outlet property="nicknameLabe" destination="V06-Gz-G2y" id="JdB-r9-rGo"/>
                 <outlet property="profile_image" destination="SB4-Rf-Swf" id="dRa-fP-zZZ"/>
                 <outlet property="repostBtn" destination="z24-4i-KrH" id="OQf-Hf-rsW"/>
             </connections>
-            <point key="canvasLocation" x="762" y="790"/>
+            <point key="canvasLocation" x="833" y="1055"/>
         </tableViewCell>
     </objects>
     <resources>
