--- a/百思不得姐/百思不得姐/Classes/Essence/Controller/YGPictureView.xib
+++ b/百思不得姐/百思不得姐/Classes/Essence/Controller/YGPictureView.xib
@@ -21,7 +21,7 @@
                         <constraint firstAttribute="width" constant="31" id="XLQ-1n-Hat"/>
                     </constraints>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sh7-h0-ft6">
+                <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sh7-h0-ft6">
                     <rect key="frame" x="0.0" y="157" width="285" height="43"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="43" id="5wh-VW-OvB"/>
