--- a/百思不得姐/百思不得姐/Classes/Other/View/YGPushGuideView.xib
+++ b/百思不得姐/百思不得姐/Classes/Other/View/YGPushGuideView.xib
@@ -43,7 +43,7 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="cQL-fb-RIg" firstAttribute="leading" secondItem="qyY-Id-x6H" secondAttribute="leading" id="50K-To-bPL"/>
                 <constraint firstItem="qyY-Id-x6H" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="6E4-OB-JWS"/>
