--- a/百思不得姐/百思不得姐/Classes/Other/YGTopicCell.xib
+++ b/百思不得姐/百思不得姐/Classes/Other/YGTopicCell.xib
@@ -7,11 +7,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="topic" rowHeight="212" id="KGk-i7-Jjw" customClass="YGTopicCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="212"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="topic" rowHeight="375" id="KGk-i7-Jjw" customClass="YGTopicCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="375"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="212"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="374.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SB4-Rf-Swf" userLabel="头像">
@@ -43,7 +43,7 @@
                         <state key="highlighted" backgroundImage="cellFollowClickIcon"/>
                     </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CFj-0a-0cs" userLabel="底部工具条">
-                        <rect key="frame" x="0.0" y="167" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="340" width="320" height="35"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cell-content-line" translatesAutoresizingMaskIntoConstraints="NO" id="HWG-8s-hWh" userLabel="分割线">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="1"/>
@@ -52,7 +52,7 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8co-tX-NC5" userLabel="顶">
-                                <rect key="frame" x="0.0" y="0.0" width="80" height="44"/>
+                                <rect key="frame" x="0.0" y="0.0" width="80" height="35"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <state key="normal" title="545" image="mainCellDing">
@@ -61,7 +61,7 @@
                                 <state key="highlighted" image="mainCellDingClick"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dm3-18-b1C" userLabel="踩">
-                                <rect key="frame" x="80" y="0.0" width="80" height="44"/>
+                                <rect key="frame" x="80" y="0.0" width="80" height="35"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <state key="normal" title="545" image="mainCellCai">
@@ -70,7 +70,7 @@
                                 <state key="highlighted" image="mainCellCaiClick"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z24-4i-KrH" userLabel="分享">
-                                <rect key="frame" x="160" y="0.0" width="80" height="44"/>
+                                <rect key="frame" x="160" y="0.0" width="80" height="35"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <state key="normal" title="545" image="mainCellShare">
@@ -79,7 +79,7 @@
                                 <state key="highlighted" image="mainCellShareClick"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jN0-Vz-hgc" userLabel="转发">
-                                <rect key="frame" x="240" y="0.0" width="80" height="44"/>
+                                <rect key="frame" x="240" y="0.0" width="80" height="35"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <state key="normal" title="545" image="mainCellComment">
@@ -88,20 +88,20 @@
                                 <state key="highlighted" image="mainCellCommentClick"/>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cell-button-line" translatesAutoresizingMaskIntoConstraints="NO" id="9pC-zm-BB0" userLabel="竖直分割线">
-                                <rect key="frame" x="80" y="15" width="1" height="29"/>
+                                <rect key="frame" x="80" y="6" width="1" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="1" id="sZv-Cr-rxs"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cell-button-line" translatesAutoresizingMaskIntoConstraints="NO" id="iok-us-t17" userLabel="竖直分割线">
-                                <rect key="frame" x="160" y="0.0" width="1" height="44"/>
+                                <rect key="frame" x="160" y="0.0" width="1" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="1" id="bdM-QW-uKf"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="1" id="o8N-kN-fH9"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cell-button-line" translatesAutoresizingMaskIntoConstraints="NO" id="luB-km-ENx" userLabel="竖直分割线">
-                                <rect key="frame" x="240" y="0.0" width="1" height="44"/>
+                                <rect key="frame" x="240" y="0.0" width="1" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="1" id="BbA-YL-Zff"/>
                                     <constraint firstAttribute="width" constant="1" id="qGw-t1-6Sd"/>
@@ -121,7 +121,7 @@
                             <constraint firstItem="dm3-18-b1C" firstAttribute="top" secondItem="8co-tX-NC5" secondAttribute="top" id="KAf-3H-56h"/>
                             <constraint firstItem="jN0-Vz-hgc" firstAttribute="height" secondItem="8co-tX-NC5" secondAttribute="height" id="MTs-SY-9dy"/>
                             <constraint firstItem="luB-km-ENx" firstAttribute="leading" secondItem="z24-4i-KrH" secondAttribute="trailing" id="NQe-h3-cXM"/>
-                            <constraint firstAttribute="height" constant="44" id="OwJ-lb-kuK"/>
+                            <constraint firstAttribute="height" constant="35" id="OwJ-lb-kuK"/>
                             <constraint firstItem="jN0-Vz-hgc" firstAttribute="leading" secondItem="z24-4i-KrH" secondAttribute="trailing" id="POJ-rW-PnF"/>
                             <constraint firstAttribute="trailing" secondItem="HWG-8s-hWh" secondAttribute="trailing" id="RtB-Yf-Sib"/>
                             <constraint firstAttribute="bottom" secondItem="9pC-zm-BB0" secondAttribute="bottom" id="TnM-xC-wqj"/>
@@ -140,6 +140,37 @@
                             <constraint firstAttribute="bottom" secondItem="luB-km-ENx" secondAttribute="bottom" id="zjY-tO-fkF"/>
                         </constraints>
                     </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="53c-Hj-FYI" userLabel="最热评论父控件">
+                        <rect key="frame" x="10" y="310" width="300" height="20"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="最热评论" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j25-TR-NoM">
+                                <rect key="frame" x="0.0" y="0.0" width="60" height="20"/>
+                                <color key="backgroundColor" red="0.67450980392156867" green="0.67450980392156867" blue="0.67450980392156867" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="JgJ-Ib-n36"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" red="1" green="0.99997437" blue="0.99999129769999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vnG-dD-hx1" userLabel="内容">
+                                <rect key="frame" x="0.0" y="20" width="300" height="0.0"/>
+                                <color key="backgroundColor" red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.59215686274509804" green="0.59215686274509804" blue="0.59215686274509804" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="vnG-dD-hx1" firstAttribute="top" secondItem="j25-TR-NoM" secondAttribute="bottom" id="2c9-fv-NDL"/>
+                            <constraint firstItem="j25-TR-NoM" firstAttribute="top" secondItem="53c-Hj-FYI" secondAttribute="top" id="aLq-Jf-rlN"/>
+                            <constraint firstItem="vnG-dD-hx1" firstAttribute="leading" secondItem="53c-Hj-FYI" secondAttribute="leading" id="mnw-70-X8H"/>
+                            <constraint firstItem="j25-TR-NoM" firstAttribute="leading" secondItem="53c-Hj-FYI" secondAttribute="leading" id="pKc-2n-LFS"/>
+                            <constraint firstAttribute="bottom" secondItem="vnG-dD-hx1" secondAttribute="bottom" id="rAK-7Z-JoU"/>
+                            <constraint firstAttribute="trailing" secondItem="vnG-dD-hx1" secondAttribute="trailing" id="rW4-jA-oWf"/>
+                        </constraints>
+                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b8v-QB-ekw" userLabel="文字">
                         <rect key="frame" x="10" y="55" width="300" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -156,8 +187,11 @@
                     <constraint firstItem="b8v-QB-ekw" firstAttribute="top" secondItem="SB4-Rf-Swf" secondAttribute="bottom" constant="10" id="Jnv-HX-AtA"/>
                     <constraint firstAttribute="bottom" secondItem="CFj-0a-0cs" secondAttribute="bottom" id="L9m-hR-P0R"/>
                     <constraint firstItem="V06-Gz-G2y" firstAttribute="top" secondItem="SB4-Rf-Swf" secondAttribute="top" id="LhS-Ly-kJk"/>
+                    <constraint firstItem="CFj-0a-0cs" firstAttribute="top" secondItem="53c-Hj-FYI" secondAttribute="bottom" constant="10" id="UDw-4S-hoN"/>
+                    <constraint firstItem="53c-Hj-FYI" firstAttribute="trailing" secondItem="OK3-Oa-wVM" secondAttribute="trailing" id="XLE-F1-VRL"/>
                     <constraint firstItem="b8v-QB-ekw" firstAttribute="leading" secondItem="SB4-Rf-Swf" secondAttribute="leading" id="Xly-Dd-HqF"/>
                     <constraint firstItem="DVp-HB-zKl" firstAttribute="leading" secondItem="V06-Gz-G2y" secondAttribute="leading" id="d0l-pt-4td"/>
+                    <constraint firstItem="53c-Hj-FYI" firstAttribute="leading" secondItem="b8v-QB-ekw" secondAttribute="leading" id="dLm-0n-tLA"/>
                     <constraint firstAttribute="trailing" secondItem="OK3-Oa-wVM" secondAttribute="trailing" constant="10" id="e3i-vK-pfd"/>
                     <constraint firstItem="b8v-QB-ekw" firstAttribute="trailing" secondItem="OK3-Oa-wVM" secondAttribute="trailing" id="ibH-Yl-WaD"/>
                     <constraint firstAttribute="trailing" secondItem="CFj-0a-0cs" secondAttribute="trailing" id="smu-XD-7q0"/>
@@ -166,7 +200,9 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="caiBtn" destination="dm3-18-b1C" id="bt8-TP-tbf"/>
+                <outlet property="cmtcontentLabel" destination="vnG-dD-hx1" id="hiQ-Qt-Cge"/>
                 <outlet property="commentBtn" destination="jN0-Vz-hgc" id="Pdy-LE-YIj"/>
+                <outlet property="commentLabel" destination="53c-Hj-FYI" id="Yd3-fW-o92"/>
                 <outlet property="contentLabel" destination="b8v-QB-ekw" id="xbK-ym-RKu"/>
                 <outlet property="createTimeLabel" destination="DVp-HB-zKl" id="1ei-rB-4X2"/>
                 <outlet property="dingBtn" destination="8co-tX-NC5" id="J6N-GE-PPs"/>
@@ -174,7 +210,7 @@
                 <outlet property="profile_image" destination="SB4-Rf-Swf" id="dRa-fP-zZZ"/>
                 <outlet property="repostBtn" destination="z24-4i-KrH" id="OQf-Hf-rsW"/>
             </connections>
-            <point key="canvasLocation" x="833" y="1055"/>
+            <point key="canvasLocation" x="833" y="1136.5"/>
         </tableViewCell>
     </objects>
     <resources>
