--- a/百思不得姐/百思不得姐/Classes/Other/YGTopicCell.xib
+++ b/百思不得姐/百思不得姐/Classes/Other/YGTopicCell.xib
@@ -39,8 +39,11 @@
                             <constraint firstAttribute="height" constant="20" id="Mpq-yE-XDg"/>
                             <constraint firstAttribute="width" constant="19" id="Xco-ax-kN1"/>
                         </constraints>
-                        <state key="normal" backgroundImage="cellFollowIcon"/>
-                        <state key="highlighted" backgroundImage="cellFollowClickIcon"/>
+                        <state key="normal" backgroundImage="cellmorebtnnormal"/>
+                        <state key="highlighted" backgroundImage="cellmorebtnclick"/>
+                        <connections>
+                            <action selector="more" destination="KGk-i7-Jjw" eventType="touchUpInside" id="8yG-uA-ucR"/>
+                        </connections>
                     </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CFj-0a-0cs" userLabel="底部工具条">
                         <rect key="frame" x="0.0" y="340" width="320" height="35"/>
@@ -216,8 +219,8 @@
     <resources>
         <image name="cell-button-line" width="1" height="29"/>
         <image name="cell-content-line" width="299" height="1"/>
-        <image name="cellFollowClickIcon" width="19" height="20"/>
-        <image name="cellFollowIcon" width="19" height="20"/>
+        <image name="cellmorebtnclick" width="24" height="20"/>
+        <image name="cellmorebtnnormal" width="24" height="20"/>
         <image name="mainCellCai" width="20" height="20"/>
         <image name="mainCellCaiClick" width="20" height="20"/>
         <image name="mainCellComment" width="20" height="20"/>
