先提交一下

--- a/百思不得姐/百思不得姐/Classes/Other/Controller/YGVoiceView.xib
+++ b/百思不得姐/百思不得姐/Classes/Other/Controller/YGVoiceView.xib
@@ -54,8 +54,8 @@
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="VoiceBgPic" destination="ZbC-dm-Xij" id="Yw5-z0-8H4"/>
                 <outlet property="playTimes" destination="GPa-wR-4M7" id="FXc-IK-8B9"/>
+                <outlet property="voiceBgPic" destination="ZbC-dm-Xij" id="gMK-Zc-x9G"/>
                 <outlet property="voiceLength" destination="4F3-gG-W2J" id="Zvb-Qr-jlp"/>
             </connections>
             <point key="canvasLocation" x="740.5" y="339.5"/>
